@@ -310,7 +310,7 @@
 <h3>DCGs rules parsing methods and non-terminals</h3>
 
 <dl class="toc-entries">
-	<dt><code><a href="methods/call1.html">call//1</a></code><span class="leader"></span><span class="page-ref"><span class="methods_call1"></span></span></dt>
+	<dt><code><a href="methods/call1.html">call//1-N</a></code><span class="leader"></span><span class="page-ref"><span class="methods_call1"></span></span></dt>
 	<dt><code><a href="methods/phrase2.html">phrase/2</a></code><span class="leader"></span><span class="page-ref"><span class="methods_phrase2"></span></span></dt>
 	<dt><code><a href="methods/phrase3.html">phrase/3</a></code><span class="leader"></span><span class="page-ref"><span class="methods_phrase3"></span></span></dt>
 </dl>
@@ -355,7 +355,7 @@
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: May 4, 2011</span>
+		<span>Last updated on: May 7, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="../glossary.html">glossary</a></span><br/>
