@@ -27,6 +27,8 @@ RELEASE NOTES
     redundant calls to (=)/2 from the body of clauses generated by the
     expansion of grammar rules).
 
+    Implemented compiler support for the call//N built-in non-terminal.
+
     Simplified the compilation of grammar rules by removing the support for
     dealing with non-terminal scope and existence errors at the grammar rule
     level instead of the predicate level. Although this feature could be
